feat: skills
