# docs/swagger.json
@@ -4933,6 +4933,10 @@
                 "description": {
                     "type": "string"
                 },
+                "metadata": {
+                    "type": "object",
+                    "additionalProperties": {}
+                },
                 "name": {
                     "type": "string"
                 }
